@@ -1,3 +1,12 @@
+2005-09-26  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-notebook.c: (tab_label_style_set_cb),
+	(build_tab_label):
+
+	Use the tab label's outer hbox for the size calculation instead
+	of the label itself. Fixes size oscillations with the Tab States
+	extension.
+
 2005-09-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyUtils.cpp:
